--- a/environment.yml
+++ b/environment.yml
@@ -188,6 +188,32 @@ dependencies:
   - zipp=3.17.0=py39h06a4308_0
   - zlib=1.2.13=h5eee18b_0
   - pip:
+    - alembic==1.13.1
+    - cloudpickle==3.0.0
+    - contourpy==1.2.0
+    - cycler==0.12.1
+    - docker==7.0.0
+    - entrypoints==0.4
+    - flask==3.0.2
+    - fonttools==4.49.0
+    - gitdb==4.0.11
+    - gitpython==3.1.42
+    - greenlet==3.0.3
+    - gunicorn==21.2.0
+    - importlib-resources==6.1.2
+    - itsdangerous==2.1.2
     - kaggle==1.6.6
+    - kiwisolver==1.4.5
+    - mako==1.3.2
+    - matplotlib==3.8.3
+    - mlflow==2.10.2
+    - pillow==10.2.0
+    - pyarrow==15.0.0
+    - pyparsing==3.1.1
     - python-slugify==8.0.4
+    - querystring-parser==1.2.4
+    - smmap==5.0.1
+    - sqlalchemy==2.0.27
+    - sqlparse==0.4.4
     - text-unidecode==1.3
+    - werkzeug==3.0.1
